# forgedbackup

./: .gitignore  Cargo.toml  README.md
example/: README.md
example/client/: config.toml
example/client/data/: important_data.txt  lots_of_data.txt  private_code.rs
example/client/signing_keys/: server1
example/client/verifying_keys/: server1.pub
example/server/: config.toml
example/server/cipher_keys/: client1.aes
example/server/signing_keys/: client1
example/server/verifying_keys/: client1.pub
src/: config.rs  fadc.rs  fce.rs  fdgse.rs  fsas.rs  lib.rs  main.rs
