[package]
name = "forgedbackup"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
log = "0.4.22"
lz4_flex = { version = "0.11", default-features = false }
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
